force-app/main/default/objects/PDRI__Engagement__c/fields/PDRI__Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Customer_Account__c</fullName>
    <description>Name of the customer account for this engageement</description>
    <label>Customer Account</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>