force-app/main/default/objects/PDRI__Engagement__c/fields/PDRI__Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Engagement_Type__c</fullName>
    <description>Contains the type of engagement. Required Field</description>
    <label>Engagement Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managed Services</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>