force-app/main/default/objects/PDRI__Engagement__c/fields/PDRI__Finish_Date__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Finish_Date__c</fullName>
    <description>SI date when Implementation will be completed. Required Field</description>
    <label>Finish Date</label>
    <type>Date</type>
</CustomField>