force-app/main/default/objects/PDRI__Engagement__c/fields/PDRI__Project_Type__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Project_Type__c</fullName>
    <description>SI type of project. Required Field</description>
    <label>Project Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>